src/styles/components/pages/landingPages/steps.scss
.steps {
  height: 100vh;
  width: 100vw;
  position: relative;

  h3 {
    padding: 2rem;
    font-size: 2rem;
    color: $white;
    font-family: $display-font;
    text-align: center;
  }

  .img-center {
    @include img-center();
  }

  .circles {
    width: 100%;
    position: absolute;
    bottom: 8rem;
    display: flex;
    justify-content: center;

    svg {
      color: $white;
      width: 2rem;
      height: 2rem;

      @media (min-width: $tablet) {
        width: 3rem;
        height: 3rem;
      }
    }
  }

  [class^="step-"] {
    // this applies to all 'step-#' classes
    height: 100vh;

    img {
      padding-top: 4rem;
    }
  }

  .step-1 {
    background: $jade;
  }

  .step-3 {
    background: $seafoam;
  }

  // Put dragon-boi on the left
  .step-1,
  .step-3 {
    .dragon-boi {
      position: absolute;
      bottom: 2rem;
      left: 2rem;

      svg {
        width: 50%;
        height: 50%;
      }
    }
  }

  // Put dragon-boi on the right and flip
  .step-2,
  .step-4 {
    .dragon-boi {
      position: absolute;
      bottom: 2rem;
      right: 2rem;
      transform: scaleX(-1);

      svg {
        width: 50%;
        height: 50%;
      }
    }
  }
}

